--- a/src/Zip.Cadastro/App.xaml
+++ b/src/Zip.Cadastro/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Zip.Cadastro"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/FormInicio.xaml">
     <Application.Resources>
         <Style x:Key="Label" TargetType="{x:Type Label}" BasedOn="{x:Null}">
             <Setter Property="HorizontalAlignment" Value="Left"/>
